# backend/app/Models/Rucher.php
@@ -8,7 +8,7 @@ use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Database\Eloquent\Relations\HasMany;
 use App\Models\User;
-// use App\Models\Ruche;
+use App\Models\Ruche;
 
 #[Fillable(['user_id', 'name', 'localisation', 'description', 'nb_emplacements'])]
 class Rucher extends Model
@@ -18,8 +18,8 @@ class Rucher extends Model
         return $this->belongsTo(User::class);
     }
 
-    // public function ruches(): HasMany
-    // {
-    //     return $this->hasMany(Ruche::class);
-    // }
+    public function ruches(): HasMany
+    {
+         return $this->hasMany(Ruche::class);
+    }
 }
